# Y-MAP-Net

./: NNConverter.py  NNExecutor.py  NNLosses.py  NNModel.py  NNOptimize.py  NNTraining.py  NNTransplant.py  PoseEstimator2D.py  README.md  TokenEstimator.py  YMAPNet.py  appFace.py  appFallDetection.py  appPoseMatch.py  calculateNormalsFromDepthmap.py  citation.bib  createJSONConfiguration.py  datasetStream.py  espStream.py  evaluateYMAPNet.py  folderStream.py  gradioClient.py  gradioServer.py  gradioShared.py  illustrate.py  imageProcessing.py  license.txt  requirements.txt  resolveJointHierarchy.py  runYMAPNet.py  runYMAPNet.sh  screenStream.py  status.html  statusServer.py  tools.py  trainFaceIdentification.py  trainTokensOnly.py  trainYMAPNet.py  visualizeTokenConfusion.py
datasets/DataLoader/: DBLoader.c  DBLoader.h  DataLoader.c  DataLoader.cbp  DataLoader.h  DataLoader.py  HeatmapGenerator.c  HeatmapGenerator.h  Makefile  PrepareBatch.c  PrepareBatch.h  cache.c  cache.h  compareHeatmapScore.py  compute_word_frequencies.py  configuration.h  createCHeatmapPrecalcs.py  debug.sh  descriptorConverter.h  makeLibrary.sh  plotThreadLog.py  profile.sh  pthreadWorkerPool.h  pthreadWorkerPool_stable.h  test.c  testLossFunction.py  tools.h  trace_io.sh
datasets/DataLoader/codecs/: asciiInput.c  asciiInput.h  bmpInput.h  codecs.c  codecs.h  image.h  jpgInput.c  jpgInput.h  pfmInput.c  pfmInput.h  pngInput.c  pngInput.h  ppmInput.c  pzp.c  pzp.h  pzpInput.c  pzpInput.h
datasets/DataLoader/processing/: augmentations.h  bilateral.h  conversions.h  draw.h  embeddings.h  flip.h  getpixels.h  labels.h  normals.h  resize.h  sobel.h
datasets/DataLoader/processing/AVX2/: AVX2_BrightnessContrast.cbp  AVX2_Sobel.cbp  augmentations.h  conversions.h  normals.h  resize_avx2.c  resize_avx512.c  sobel.h  test_brightness_contrast_avx2.c  test_sobel_avx2.c
docker/: Dockerfile  build_and_deploy.sh
scripts/: downloadExperimental.sh  downloadModel.sh  downloadPretrained.sh  run_windows.bat  setup.sh  updateFromInternalRepository.sh  y-map-net.ipynb
ymapnet_cpp/: CMakeLists.txt  README.md
ymapnet_cpp/src/: heatmap_vis.hpp  main.cpp  model.cpp  model.hpp  postprocess.hpp  preprocess.hpp  skeleton.hpp
